unpackaged/main/default/objects/Help_Article__c/Help_Article__c.object-meta.xml
<CustomObject>
    <label>Help Article</label>
    <nameField>
        <label>Help Article Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Help Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>