unpackaged/main/default/objects/Help_Article__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>The SharePoint article ID for updating articles as needed</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>