unpackaged/main/default/objects/Help_Article__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>HYPERLINK(URL__c, Name, "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link</label>
    <type>Text</type>
</CustomField>