unpackaged/main/default/objects/Help_Article__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>