unpackaged/main/default/objects/Help_Article__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Link__c</columns>
    <columns>Topic__c</columns>
    <columns>URL__c</columns>
    <columns>External_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>