unpackaged/main/default/objects/Help_Article__c/listViews/Opportunity.listView-meta.xml
<ListView>
    <fullName>Opportunity</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Topic__c</field>
        <operation>includes</operation>
        <value>Opportunity</value>
    </filters>
    <label>Opportunity</label>
</ListView>