unpackaged/main/default/objects/Help_Article__c/listViews/Test_List.listView-meta.xml
<ListView>
    <fullName>Test_List</fullName>
    <columns>URL__c</columns>
    <filterScope>Mine</filterScope>
    <label>Test List</label>
</ListView>